--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     
-    <title>ItBursa students</title>
+    <title>ItBursa student detail</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -136,13 +136,13 @@
                         <tr>
                          <td></td>
                          <td></td>
-                         <td>Problem task 1</td>
+                         <td>Problem Task 1</td>
                          <td>100%<td>
                         </tr>
                         <tr>
                          <td></td>
                          <td></td>
-                         <td>Problem task 2</td>
+                         <td>Problem Task 2</td>
                          <td>100%<td>
                         </tr>
                         <tr>
@@ -154,7 +154,7 @@
                         <tr>
                          <td></td>
                          <td></td>
-                         <td>Problem task 1</td>
+                         <td>Problem Task 1</td>
                          <td>100%<td>
                         </tr>
                       </tbody>
