--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -43,7 +43,7 @@
 
        <div>
         <div class="container">
-          <h1>Students</h1>
+          <h1>Students PyBursa</h1>
         </div>
         
         <p class="lead">list of students:</p>
@@ -54,7 +54,7 @@
               <th>No</th>
               <th>Surname</th>
               <th>Name</th>
-              <th>Adress</th>
+              <th>Address</th>
               <th>Skype</th>
              </tr>
           </thead>
@@ -70,7 +70,7 @@
               <td scope="row">2</td>
               <td>Surname_2</td>
               <td>Name_2</td>
-              <td>Adress_2</th>
+              <td>Address_2</th>
               <td>Skype_2</td>
               </td>
             </tr>
@@ -78,7 +78,7 @@
               <td scope="row">3</td>
               <td>Surname_3</td>
               <td>Name_3</td>
-              <td>Adress_3</th>
+              <td>Address_3</th>
               <td>Skype_3</td>
               </td>
             </tr>
@@ -86,7 +86,7 @@
               <td scope="row">4</td>
               <td>Surname_4</td>
               <td>Name_4</td>
-              <td>Adress_4</th>
+              <td>Address_4</th>
               <td>Skype_4</td>
               </td>
             </tr>
@@ -94,7 +94,7 @@
               <td scope="row">5</td>
               <td>Surname_5</td>
               <td>Name_5</td>
-              <td>Adress_5</th>
+              <td>Address_5</th>
               <td>Skype_5</td>
               </td>
             </tr>
