--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,7 +38,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Main</a></li>
-                <li class="active"><a href="">Contact</a></li>
+                <li class="active"><a href="">Contacts</a></li>
                   </ul>
                 </li>
               </ul>
@@ -118,7 +118,6 @@
             <li>Email: daria.mykhalevych@gmail.com</li>
             <li>Phone: +38 096 469 15 57</li>
           </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/pasha.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -129,7 +128,6 @@
             <li>Email: itbursa100@gmail.com</li>
             <li>Phone: +38 096 469 15 57</li>
           </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/alena.jpg" alt="Generic placeholder image" width="140" height="140">
@@ -140,7 +138,6 @@
             <li>Email: alena.itbursa@gmail.com</li>
             <li>Phone: +38 063 625 07 55</li>
           </ul>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
