--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="">Main</a></li>
                <!-- <li><a href="#about">About</a></li>-->
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contacts</a></li>
                   </ul>
                 </li>
               </ul>
@@ -54,16 +54,16 @@
     <div>
     	<div class="container">
     		<h1 id="pybursa_project">PyBursa Project</h1>
-	    	<div class="container">
-	    		<h3 id="description">Description</h3>
-	    		<p class="first-p">	
-	    			В этом курсе мы сместили акцент в сторону практики.
-					Будет умеренное количество теории - максимум практики.
-					Примерное соотношение теории и практики: 30% на 70%
-					Курсы будут проходить с 19 октября по 28 декабря.
-					Практические занятия в аудитории + онлайн лекции.
-	    		</p>
-	    	</div>
+		    	<div class="container">
+		    		<h3 id="description">Description</h3>
+		    		<p class="first-p">	
+		    			В этом курсе мы сместили акцент в сторону практики.
+						Будет умеренное количество теории - максимум практики.
+						Примерное соотношение теории и практики: 30% на 70%
+						Курсы будут проходить с 19 октября по 28 декабря.
+						Практические занятия в аудитории + онлайн лекции.
+		    		</p>
+		    	</div>
 	    	<div class="container">
 	    		<h3 id="program">Program</h3>
 	    		<ul>
@@ -111,7 +111,6 @@
 			    			синтаксис, атрибуты, методы, инстанцирование
 							все объект, служебные методы
 							</h5>
-			    		</p>
 			    	</li>
 	    		</ul>
 	    	</div>	
