First attempt to test2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,20 +15,20 @@ body {
 h1 {
 	text-align: center;
 }
-table {
+.first_table {
     width: 600px; 
     margin: auto;
     border-collapse: collapse;
     border: 3px solid black;   
 }
 
-th {
+.first_th {
     border-bottom: 2px solid black;
     vertical-align: middle;
     padding: 10px;
     padding-right: 30px;
 }
-td {
+.first_td {
 	text-align: center;
 	border-bottom: 2px solid black;
 }
@@ -37,8 +37,23 @@ li {
 }
 .more {
 	color: blue;
+	text-align: center;
 }
 .num {
 	font-size: 40px;
 	text-align: center;
+	border-bottom: 2px solid black;
+}
+.student_table {
+	border-collapse: collapse;
+	border: 3px solid black;
+	width: auto;
+	background-color: orange;
+}
+.student_td {
+    border-bottom: 2px solid lightgray;
+}
+.personal_table {
+	width: 50%;
+	background-color: oldlace;
 }
