--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>      
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>    
           </ul>
         </div>
       </nav>
@@ -30,21 +31,21 @@
       </div>
     </div>
     <h1>Program</h1>
-    <table>
+    <table class='first_table'>
       <tr>
-        <th>Занятие
+        <th class='first_th'>Занятие
         </th>
-        <th>Тема
+        <th class='first_th'>Тема
         </th>
-        <th>Содержание
+        <th class='first_th'>Содержание
         </th>
       </tr>
       <tr>
         <td class="num">1
         </td>
-        <td>Основы Python
+        <td class='first_td'>Основы Python
         </td>
-        <td>
+        <td class='first_td'>
           <ul>
             <li><code>zen</code>, <code>pep8</code>, <code>pylint</code>, tools, IDE</li>
             <li>консоль, типы данных, операторы</li>
@@ -57,9 +58,9 @@
       <tr>
         <td class="num">2
         </td>
-        <td>Строки и итераторы
+        <td class='first_td'>Строки и итераторы
         </td>
-        <td>
+        <td class='first_td'>
           <ul>
             <li>работа со строками и итерируемыми типами</li>
             <li>запуск скрипта и параметры</li>
@@ -70,9 +71,9 @@
       <tr>
         <td class="num">3
         </td>
-        <td>Функции и модульность
+        <td class='first_td'>Функции и модульность
         </td>
-        <td>
+        <td class='first_td'>
           <ul>
             <li>функции (<code>def</code>, <code>lambda</code>)</li>
             <li>генераторы списков</li>
