--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -27,11 +27,11 @@
     </div>
     <div class="row">
       <div class="container">
-        <p>Список студентов курса 19 октября - 28 декабря 2015 г.</p>
+        <p>Список студентов курса <code>19 октября - 28 декабря 2015 г.</code></p>
       </div>
     </div>
     <div class="container table-responsive">
-      <table class='table table-hover student_table'>
+      <table class='table table-hover student_table table-condensed'>
         <tr>
           <th class='student_td'>№
           </th>
