files add. second try

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <script type="text/javascript" src="../static/js/mine.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <link href="carousel.css" rel="stylesheet">
+    <link href="../static/css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
