--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,7 +17,7 @@
     <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
 
-    <link href="carousel.css" rel="stylesheet">
+    <link href="../static/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -55,9 +55,9 @@
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="0" class="active">Some text needed</li>
+        <li data-target="#myCarousel" data-slide-to="1">the same</li>
+        <li data-target="#myCarousel" data-slide-to="2">the same</li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
