--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -27,21 +27,21 @@
     </div>
     <div class="row">
       <div class="container">
-        <p class="text-primary">Список студентов курса <code>19 октября - 28 декабря 2015 г.</code></p>
+        <p>Список студентов курса <code>19 октября - 28 декабря 2015 г.</code></p>
       </div>
     </div>
     <div class="container table-responsive">
       <table class='table table-hover student_table table-condensed table-responsive'>
         <tr>
-          <th class='student_td'>№
+          <th class='student_td text-primary'>№
           </th>
-          <th class='student_td'>Surname
+          <th class='student_td text-primary'>Surname
           </th>
-          <th class='student_td'>Name
+          <th class='student_td text-primary'>Name
           </th>
-          <th class='student_td'>Adress
+          <th class='student_td text-primary'>Adress
           </th>
-          <th class='student_td'>Skype</th>
+          <th class='student_td text-primary'>Skype</th>
         </tr>
         <tr>
           <td class='student_td'><a href="student_detail.html">1</a>
