--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,18 +27,10 @@
 
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-            </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="index.html">Main</a></li>
-                <li class="active"><a href="">Contacts</a></li>
+                <li class="active"><a href="contact.html">Contacts</a></li>
                   </ul>
                 </li>
               </ul>
