--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../favicon.gif">
-
     <title>PyBursa Project</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="../static/css/style.css" rel="stylesheet">
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+	  <link href="../static/css/style.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <script type="text/javascript" src="../static/js/mine.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -30,17 +23,9 @@
 
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-            </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="">Main</a></li>
+                <li class="active"><a href="index.html">Main</a></li>
                <!-- <li><a href="#about">About</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
                   </ul>
@@ -67,50 +52,26 @@
 	    	<div class="container">
 	    		<h3 id="program">Program</h3>
 	    		<ul>
-	    			<li id="list">
-			    		<p>
-			    			<h5>
-			    			zen, pep8, pylint, tools, IDE
+	    			<li id="list">zen, pep8, pylint, tools, IDE
 							консоль, типы данных, операторы
 							синтаксис управляющих конструкций (if, for...)
 							исключения и разбор стектрейса
 							кодировка в Python
-							</h5>
-			    		</p>
 			    	</li>
-			    	<li id="list2">
-			    		<p>
-			    			<h5>
-			    			работа со строками и итерируемыми типами
+			    	<li id="list2">работа со строками и итерируемыми типами
 							запуск скрипта и параметры
 							git http://try.github.com/levels/
-							</h5>
-			    		</p>
 			    	</li>
-			    	<li id="list3">
-			    		<p>
-			    			<h5>
-			    			функции (def, lambda)
+			    	<li id="list3">функции (def, lambda)
 							генераторы списков
 							модули, структура	
-							</h5>
-			    		</p>
 			    	</li>
-			    	<li id="list">
-			    		<p>
-			    			<h5>
-				    		встроенные библиотеки http://docs.python.org/
+			    	<li id="list">встроенные библиотеки http://docs.python.org/
 							сторонние библиотеки (менеджер пакетов) PYPI
 							PYTHONPATH и виртуальное окружение
-							</h5>
-			    		</p>
 			    	</li id="list2">
-			    	<li>
-			    		<p>
-			    			<h5>
-			    			синтаксис, атрибуты, методы, инстанцирование
+			    	<li>синтаксис, атрибуты, методы, инстанцирование
 							все объект, служебные методы
-							</h5>
 			    	</li>
 	    		</ul>
 	    	</div>	
@@ -119,57 +80,6 @@
 
     </div><!-- /.container -->
     <div class="container">
-    	<div id="slider_center">
-
-		    <!-- Carousel
-    ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-        <li data-target="#myCarousel" data-slide-to="4"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="../static/images/1.jpg" alt="First slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="../static/images/2.jpg" alt="Second slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="../static/images/3.jpg" alt="Third slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="../static/images/4.jpg" alt="Third slide">
-          <div class="container">
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="../static/images/5.jpg" alt="Third slide">
-          <div class="container">
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
-		</div>
-	</div>
 	      <!-- FOOTER -->
       <footer>
       		<div class="container">
@@ -186,6 +96,7 @@
       			</div>
       		</div>
       </footer>
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
