--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,19 +20,21 @@
   </head>
   <body>
 		<nav class="navbar navbar-default navbar-static-top">
-  		<div class="container">
+			<div class="container">
 				<ul class="nav navbar-nav">
-		      <li><a href="index.html">Main</a></li>
-		      <li class="active"><a href="contact.html">Contacts</a></li>
-      	</ul>
-  		</div>
+					<li><a href="index.html">Main</a></li>
+					<li class="active"><a href="contact.html">Contacts</a></li>
+				</ul>
+			</div>
 		</nav>
 		<div class ='container'>
 			<div class='jumbotron'>
 				<h2 class='text-uppercase'>Contacts</h2>
-				<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to write an email</button>
 			</div>
-			<div class="alert alert-success" role="alert">You can contact us!</div>
+			<div class="alert alert-success" role="alert">
+				<p class="alert-success">You can contact us!</p>
+			</div>
+			<p class="button"><button type="button" class="btn btn-lg btn-default" data-toggle="popover" title="Email" data-content="And here's some amazing content. It's very engaging. Right?">Click to write an email</button></p>
 			<div class='proffesion'>
 				<hr>
 				<h2 class='possition'>Director</h2>
@@ -69,7 +71,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
 
