--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
-		<link href="../static/css/style.css" rel="stylesheet">
+	<link href="../static/css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-default navbar-static-top">
 	  		<div class="container">
 				<ul class="nav navbar-nav">
-			        <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
+			        <li class="active"><a href="index.html">Main</a></li>
 			        <li><a href="contact.html">Contacts</a></li>
 				</ul>
 	  		</div>
@@ -32,7 +32,7 @@
 			<h2 class='possition'>Description</h2>
 			<div class='jumbotron'>
 				<p class='text'>Python course can be easy to pick up whether you're a first time programmer or you're experienced with other languages.</p>
-				<li class="list-group-item list-group-item-warning"><span id='bursa'>PyBursa</span> is a useful first step to get on your way writing programs with Python!</li>
+				<p class="list-group-item list-group-item-warning"><span id='bursa'>PyBursa</span> is a useful first step to get on your way writing programs with Python!</p>
 				<p class='text2'>The online conferences and meetups, collaborates on code, and much more. Online videos will help you along the way, and the mailing lists will keep you in touch.</p>
 			</div>
 			<h2 class='possition'>Program</h2>
@@ -54,7 +54,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
 
