Fifth attempt to test2

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pybursa Main</title>
+    <title>Student Detail</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
   </head>
@@ -137,13 +137,13 @@
           <td>100%</td>
         </tr>
         <tr>
-          <td>Problem task № 1
+          <td>Problem Task. № 1
           </td>
           <td>100%
           </td>
         </tr>
         <tr>
-          <td>Problem task № 2
+          <td>Problem Task. № 2
           </td>
           <td>95%
           </td>
