--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- SAMPLE COMMENT -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,8 @@
     <link href="../static/css/style.css" rel="stylesheet">
   </head>
   <body class="sl-background">
-    <nav class="navbar navbar-inverse">
+    <!-- menu start -->  
+    <nav class="navbar-fixed-top navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="index.html">
@@ -22,29 +22,34 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>
-            </li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
+        </div>
+      </div>
     </nav>
+    <!-- menu end -->  
     <div class="slash-div">
     Welcome to God's Bursa, lucky man! In our cource we will teach you code like a God (or try to do it). Good luck !
     <h2>Description of God's Bursa</h2>
-        <div style="container">
+      <div style="container">
         On our cource you have possibility to learn:<br><br>
-            <dl>
-              <dt>Python</dt>
-              <dd>Python is a programming language that lets you work more quickly and integrate your systems more effectively.<br>
-    You can learn to use Python and see almost immediate gains in productivity and lower maintenance costs. </dd><br>
-              <dt>HTML</dt>
-              <dd>HyperText Markup Language, commonly referred to as HTML, is the standard markup language used to create web pages. Along with CSS, and JavaScript, HTML is a cornerstone technology, used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications. [1] Web browsers can read HTML files and render them into visible or audible web pages. HTML describes the structure of a website semantically along with cues for presentation, making it a markup language, rather than a programming language.</dd><br>
-              <dt>CSS</dt>
-              <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.[2]</dd><br>
-              <dt>GIT</dt>
-              <dd> Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
-Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows. </dd><br>
-              </dl>
-   And many other thinds...
+          <dl>
+            <dt>Python</dt>
+            <dd>Python is a programming language that lets you work more quickly and integrate your systems more effectively.<br>
+    You can learn to use Python and see almost immediate gains in productivity and lower maintenance costs. 
+            </dd><br>
+            <dt>HTML</dt>
+            <dd>HyperText Markup Language, commonly referred to as HTML, is the standard markup language used to create web pages. Along with CSS, and JavaScript, HTML is a cornerstone technology, used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications. Web browsers can read HTML files and render them into visible or audible web pages. HTML describes the structure of a website semantically along with cues for presentation, making it a markup language, rather than a programming language.
+            </dd><br>
+            <dt>CSS</dt>
+            <dd>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+            </dd><br>
+            <dt>GIT</dt>
+            <dd> Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
+Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows. 
+            </dd><br>
+          </dl>
+            And many other thinds...
         </div>    
     <h2>Program of God's Bursa</h2>
         <div style="container">
@@ -60,28 +65,27 @@ We will leverage modules from within the Python Standard Library and also learn 
             <dt>Lesson 3: Making Classes (5 hours)</dt>
             <dd>In this lesson we will learn to create our first class. While doing this we will build a website that plays trailers of your favorite movies. Here are some of the programming ideas we will learn in this lesson:
         <ul>
-    <li>How to create a class</li>
-    <li> How to instantiate an object</li>
-    <li> How to access class attributes and methods</li>
-    <li>What is the self keyword</li>
-    <li>What are constructors (__init__)</li>
-    <li> What are DocStrings</li>
-    <li>How to create and access Class Variables</li>
-    <li>How does Inheritance work</li>
-    <li>How to override methods</li>
-            </ul></dd>
+            <li>How to create a class</li>
+            <li> How to instantiate an object</li>
+            <li> How to access class attributes and methods</li>
+            <li>What is the self keyword</li>
+            <li>What are constructors (__init__)</li>
+            <li> What are DocStrings</li>
+            <li>How to create and access Class Variables</li>
+            <li>How does Inheritance work</li>
+            <li>How to override methods</li>
+         </ul></dd>
         <dt>Final Project (6 hours)</dt>
         <dd>Here, you will use the skills learned in this course to identify a problem statement and idea for a project. You will then identify step-by step directions (in simple English) to design a solution for the previously identified problem. Finally, you will use this design and your newly learned object-oriented programming skills to write code to realize your project.</dd>
             </dl>
         </div>
     </div>
-   </div>
-    <br><br>
     </div>
-      <div class="navbar-fixed-bottom row-fluid">
+    </div>
+    <div class="navbar-fixed-bottom row-fluid">
       <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
     </div>
-   <script src="../static/js/jquery.min.js"></script>
-   <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
