--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- SAMPLE COMMENT -->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Contacts</title>
+    <title>Contacts</title>
     <link rel="shortcut icon" type="image/x-icon" href="../static/images/favicon.ico" />
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
   </head>
-  <body class="sl-background">
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">
-            <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+    <body class="sl-background">
+    <!-- menu start -->  
+        <nav class="navbar-fixed-top navbar-inverse">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="index.html">
+                <img class="sl-brand" alt="GodsBursa" src="../static/images/gb-logo.jpg">
+              </a>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="index.html">Main</a></li>
+                <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+                <li><a href="student_list.html">Students</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    <!-- menu end -->  
+    <!-- main contact -->  
     <div class="slash-div">
       <div class="container" align="center"> 
        <div class="media">
@@ -37,17 +39,20 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading sl-h4-contacts">Director</h4>
-            <div class="sl-contacts">
-            Name:   Tony Stark<br>
-            Skype:  redironman<br>
-            Email:  ironmain@google.com<br>
-            Phone:  +1234567890<br></div>
+              <div class="sl-contacts">
+                Name:   Tony Stark<br>
+                Skype:  redironman<br>
+                Email:  ironmain@google.com<br>
+                Phone:  +1234567890<br></div>
+              </div>
           </div>
         </div>
+        <!-- main contact end + splitter -->  
+        <div class="progress">
+          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+          </div>
         </div>
-            <div class="progress">
-              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-            </div></div>
+        <!-- other contacts --> 
         <div class="media">
           <div class="media-left">
             <a href="#">
@@ -78,8 +83,9 @@
             </div>
           </div>
         </div>
-   </div>
-      <div class="navbar-fixed-bottom row-fluid">
+    </div>
+    <!-- end of contacts --> 
+    <div class="navbar-fixed-bottom row-fluid">
       <div class="panel-footer sl-footer">&copy; Stalker inc., 2015+</div>
     </div>
     <script src="../static/js/jquery.min.js"></script>
