--- a/templates/contact.html
+++ b/templates/contact.html
@@ -37,7 +37,6 @@
             </div>
           </div>
         </nav>
-
       </div>
     </div>
 
@@ -103,7 +102,7 @@
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/darka.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2 id="manager">Manager</h2>
+          <h2 class="manager">Manager</h2>
           <ul>
             <li>Name: Дария Михалевич</li>
             <li>Skype: darka.darka.darka.darka.</li>
@@ -113,7 +112,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/pasha.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2 id="founder">Founder</h2>
+          <h2 class="founder">Founder</h2>
           <ul>
             <li>Name: Павел Обод</li>
             <li>Skype: azaless</li>
@@ -123,7 +122,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="../static/images/alena.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2 id="director">Director</h2>
+          <h2 class="director">Director</h2>
           <ul>
             <li>Name: Алена Чайка</li>
             <li>Skype: alena.itbursa</li>
