--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,9 @@
     </div>
     <div>
     	<div class="container">
-    		<h1 id="pybursa_project">PyBursa Project</h1>
+    		<h1 class="pybursa_project">PyBursa Project</h1>
 		    	<div class="container">
-		    		<h3 id="description">Description</h3>
+		    		<h3 class="description">WTF Description</h3>
 		    		<p class="first-p">	
 		    			В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
@@ -50,26 +50,26 @@
 		    		</p>
 		    	</div>
 	    	<div class="container">
-	    		<h3 id="program">Program</h3>
+	    		<h3 class="program">Program</h3>
 	    		<ul>
-	    			<li id="list">zen, pep8, pylint, tools, IDE
+	    			<li class="list">zen, pep8, pylint, tools, IDE
 							консоль, типы данных, операторы
 							синтаксис управляющих конструкций (if, for...)
 							исключения и разбор стектрейса
 							кодировка в Python
 			    	</li>
-			    	<li id="list2">работа со строками и итерируемыми типами
+			    	<li class="list2">работа со строками и итерируемыми типами
 							запуск скрипта и параметры
 							git http://try.github.com/levels/
 			    	</li>
-			    	<li id="list3">функции (def, lambda)
+			    	<li class="list3">функции (def, lambda)
 							генераторы списков
 							модули, структура	
 			    	</li>
-			    	<li id="list">встроенные библиотеки http://docs.python.org/
+			    	<li class="list">встроенные библиотеки http://docs.python.org/
 							сторонние библиотеки (менеджер пакетов) PYPI
 							PYTHONPATH и виртуальное окружение
-			    	</li id="list2">
+			    	</li class="list2">
 			    	<li>синтаксис, атрибуты, методы, инстанцирование
 							все объект, служебные методы
 			    	</li>
@@ -86,7 +86,7 @@
       			<div class="footer_div">
       				<ul>
       					<ul>
-      						<h3 id="end_of_course">По окончанию курсов вы будете точно...<h3>
+      						<h3 class="end_of_course">По окончанию курсов вы будете точно...<h3>
 							<li>следовать zen-python, писать правильный python-код согласно лучшим практикам</li>
 							<li>разрабатывать серверный бекенд веб-приложений на современном языке</li>
 							<li>реализовывать и разворачивать полноценный веб-проект на python/django</li>
@@ -97,6 +97,31 @@
       		</div>
       </footer>
     </div>
+    <div class="alert alert-success" role="alert">Пора</div>
+    <div class="alert alert-info" role="alert">начинать</div>
+    <div class="alert alert-warning" role="alert">учить</div>
+    <div class="alert alert-danger" role="alert">Python</div>
+
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+        </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Basic panel example
+        </div>
+      </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
