--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -105,11 +105,11 @@
                 <td>100%</td>                
               </tr>
               <tr>
-                <td>Problem task #1</td>
+                <td>Problem Task #1</td>
                 <td>69%</td>                
               </tr>
               <tr>
-                <td>Problem task #2</td>
+                <td>Problem Task #2</td>
                 <td>75%</td>                
               </tr>
               <tr>
@@ -119,11 +119,11 @@
                 <td>100%</td>                
               </tr>
               <tr>
-                <td>Problem task #1</td>
+                <td>Problem Task #1</td>
                 <td>69%</td>                
               </tr>
               <tr>
-                <td>Problem task #2</td>
+                <td>Problem Task #2</td>
                 <td>75%</td>                
               </tr>
             </tbody>
