--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -31,15 +31,15 @@
       </div>
     </div>
     <div class="container table-responsive">
-      <table class='table table-hover student_table table-condensed table-responsive'>
+      <table class='table table-hover table-condensed table-responsive student_table'>
         <tr>
-          <th class='student_td text-primary'>№
+          <th class='student_td text-primary'>No
           </th>
           <th class='student_td text-primary'>Surname
           </th>
           <th class='student_td text-primary'>Name
           </th>
-          <th class='student_td text-primary'>Adress
+          <th class='student_td text-primary'>Address
           </th>
           <th class='student_td text-primary'>Skype</th>
         </tr>
