--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="container table-responsive">
-      <table class='table table-hover table-condensed table-responsive student_table'>
+      <table class='table table-hover table-condensed table-responsive table-bordered student_table'>
         <tr>
           <th class='student_td text-primary'>No
           </th>
