Eighth attempt to test2

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -74,23 +74,23 @@
           </td>
         </tr>
         <tr>
-          <td class='student_td'>4</td>
-          <td class='student_td'>Хренова</td>
-          <td class='student_td'>Гадя</td>
-          <td class='student_td'>г.Сочи, ул. Морская, д.38
+          <td class='text-muted'>4</td>
+          <td class='text-muted'>Хренова</td>
+          <td class='text-muted'>Гадя</td>
+          <td class='text-muted'>г.Сочи, ул. Морская, д.38
           </td>
-          <td class='student_td'>Gde_pisat_parol</td>
+          <td class='text-muted'>Gde_pisat_parol</td>
         </tr>
         <tr>
-          <td class='student_td'>5
+          <td class='text-success'>5
           </td>
-          <td class='student_td'>Вассерман
+          <td class='text-success'>Вассерман
           </td>
-          <td class='student_td'>Анатолий
+          <td class='text-success'>Анатолий
           </td>
-          <td class='student_td'>г.Москва, ул. Содовое кольцо, д.69, кв. 96
+          <td class='text-success'>г.Москва, ул. Содовое кольцо, д.69, кв. 96
           </td>
-          <td class='student_td'>Evil_waits
+          <td class='text-success'>Evil_waits
           </td>
         </tr>
       </table>
