--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,27 +1,37 @@
 body {
   padding-top: 20px;
 }
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 14px;
+}
 .footer {
   text-align: center;
 }
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
-}
-.starter-regullar {
-  padding: 40px 50px;
+.course {
   text-align: left;
+  font-size: 10px;
+}
+h1.course {
+  font-size: 32px;
+  font-weight: bold;
 }
 ul.course {
   list-style-type: none;
 }
 li.course {
   font-weight: bold;
-  padding: 10px;
+  padding: 15px;
+  font-size: 18px;
 }
 ol.course {
   font-weight: normal;
   font-variant:normal;
+  font-size: 14px;
 }
 .footer {
   padding-top: 40px;
@@ -29,65 +39,25 @@ ol.course {
   margin-top: 40px;
   border-top: 1px solid #eee;
 }
-.jumbotron {
-  text-align: center;
-  background-color: transparent;
+.row {
+  text-align: left;
+  padding: 5px 10px;
+  font-size: 14px;
 }
-.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
-}
-.nav-justified {
-  background-color: #eee;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-.nav-justified > li > a {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  margin-bottom: 0;
+.panel-title
+{
+  font-size: 14px;
   font-weight: bold;
-  color: #777;
-  text-align: center;
-  background-color: #e5e5e5;
-  background-repeat: repeat-x;
-  border-bottom: 1px solid #d5d5d5;
 }
-.nav-justified > .active > a,
-.nav-justified > .active > a:hover,
-.nav-justified > .active > a:focus {
-  background-color: #ddd;
-  background-image: none;
+.face {
+  margin: 0px auto;
+  display: block;
 }
-.nav-justified > li:first-child > a {
-  border-radius: 5px 5px 0 0;
+.starter-regullar{
+  padding: 0px 70px;
+  text-align: left;
+  font-size: 10px;
 }
-.nav-justified > li:last-child > a {
-  border-bottom: 0;
-  border-radius: 0 0 5px 5px;
-}
-@media (min-width: 768px) {
-  .nav-justified {
-    max-height: 52px;
-  }
-  .nav-justified > li > a {
-    border-right: 1px solid #d5d5d5;
-    border-left: 1px solid #fff;
-  }
-  .nav-justified > li:first-child > a {
-    border-left: 0;
-    border-radius: 5px 0 0 5px;
-  }
-  .nav-justified > li:last-child > a {
-    border-right: 0;
-    border-radius: 0 5px 5px 0;
-  }
-}
-@media screen and (min-width: 768px) {
-  .masthead,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
+.custom-header {
+  padding: 0px 80px;
 }
