--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,88 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Contacts</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <!-- Bootstrap -->
+    <title>Theme Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <!-- <link href="../static/css/bootstrap-theme.css" rel="stylesheet"> -->
+
     <!-- Custom styles for this template -->
+    <!-- <link href="../static/css/theme.css" rel="stylesheet"> -->
     <link href="../static/css/style.css" rel="stylesheet">
 
-    </head>
-  <body>
-    <div class="masthead">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body role="document">
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="custom-header">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PyBursa</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <div class="starter-regullar">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
-          <h3>Director</h3>
-          <p class="text-danger">Name: Daria Mykhalevych</p>
-          <p>Email: daria.mykhalevych@gmail.com</p>
-          <p>Skype:  darka.darka.darka.darka.</p>
-          <p>Phone: +38 096 469 15 57</p>
-          <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback</a>
-          </p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
-          <h3>Manager</h3>
-          <p class="text-danger">Name: Alyona Chaika</p>
-          <p>Email: alena.itbursa@gmail.com</p>
-          <p>Skype:  alena.itbursa</p>
-          <p>Phone: +38 063 625 07 55</p>
-          <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback</a>
-          </p>
-        </div>
-
-        <div class="col-lg-4">
-          <img src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;">
-          <h3>Founder</h3>
-          <p class="text-danger">Name: Pavel Obod</p>
-          <p>Email: itbursa100@gmail.com</p>
-          <p>Skype: azaless</p>
-          <p>Phone: +38 096 469 15 56</p>
-          <p>
-            <a class="btn btn-default" href="#" role="button"> Feedback</a>
-          </p>
+          </ul>
         </div>
       </div>
+    </nav>
 
+    <div class="container theme-showcase" role="main">
+
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Director</h3>
+            </div>
+            <div class="panel-body">
+                <br><strong>Name:</strong> Daria Mykhalevych
+                <br><strong>Email:</strong> daria.mykhalevych@gmail.com
+                <br><strong>Skype:</strong> darka.darka.darka.darka
+                <br><strong>Phone:</strong> +38 096 469 15 57
+              </div>
+              <div class="panel-body">
+                <img class="face" src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
+              </div>
+          </div>
+        </div>
+      
+        <div class="col-sm-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Manager</h3>
+            </div>
+            <div class="panel-body">
+              <br><strong>Name:</strong> Alyona Chaika
+              <br><strong>Email:</strong> alena.itbursa@gmail.com
+              <br><strong>Skype:</strong> alena.itbursa
+              <br><strong>Phone:</strong> +38 063 625 07 55
+            </div> 
+              <div class="panel-body">
+                <img class="face" src="../static/images/alena.jpg"  alt="Alyona Chaika" style="width:90px;height:120px;">
+              </div>
+          </div>
+        </div>
+
+        <div class="col-sm-4">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Founder</h3>
+            </div>
+            <div class="panel-body">
+              <br><strong>Name:</strong> Pavel Obod
+              <br><strong>Email:</strong> itbursa100@gmail.com
+              <br><strong>Skype:</strong> azaless
+              <br><strong>Phone:</strong> +38 096 469 15 56
+            </div>
+            <div class="panel-body">
+                <img class="face"  src="../static/images/pasha.jpg"  alt="Pavel Obod" style="width:90px;height:120px;" align="center" >
+              </div>
+          </div>
+        </div>
+          
+      </div>
+      
     </div>
-    
     <!-- Site footer -->
     <footer class="footer">
       <p>&copy; PyBursa 2015</p>
     </footer>
-    
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
