--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Main</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <!-- Bootstrap -->
+    <title>Theme Template for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap theme -->
+    <!-- <link href="../static/css/bootstrap-theme.css" rel="stylesheet"> -->
+
     <!-- Custom styles for this template -->
+    <!-- <link href="../static/css/theme.css" rel="stylesheet"> -->
     <link href="../static/css/style.css" rel="stylesheet">
 
-    </head>
-  <body>
-    <div class="container">
-      <div class="masthead">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body role="document">
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="custom-header">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">PyBursa</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
-            </ul>
-          </div>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
 
-      <div class="starter-regullar">
-        <h2 class="starter-regular">Description</h2>
-        <p class="course">This course introduces the student to the Python language. Upon completion of this class, the student will be able to write non trivial 
-        Python programs dealing with a wide variety of subject matter domains. Topics include language components, the IDLE environment, control flow constructs, strings, 
-        I/O, collections, classes, modules, and regular expressions. The course is supplemented with many hands on labs using either Linux or Windows.
+    <div class="container theme-showcase" role="main">
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1 class="course">Description</h1>
+        <p class="starter-regullar">This course introduces the student to the Python language. Upon completion of this class, the student will be able to write non trivial 
+        Python programs dealing with a wide variety of subject matter domains.
         </p>
-
-       <h2 class="starter-regular">Program</h2>
+        <h1 class="course">Program</h1>
         <ul class="course">
           <li class="course">Chapter 1: An Introduction to Python
             <ol class="course">
@@ -190,23 +209,19 @@
             </ol>
           </li>
       </ul>
-     
+      
       </div>
       
-    <!-- Jumbotron -->
-    <div class="jumbotron">
-      <p class="lead">Learn to program in Python, a powerful language used by sites like YouTube and Dropbox.</p>
-      <p><a class="btn btn-lg btn-success" href="http://getbootstrap.com/examples/justified-nav/#" role="button">Get started today</a></p>
+      <!-- Site footer -->
+      <footer class="footer">
+        <p>&copy; PyBursa 2015</p>
+      </footer>
+      
     </div>
-    
-    <!-- Site footer -->
-    <footer class="footer">
-      <p>&copy; PyBursa 2015</p>
-    </footer>
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
