low added in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,8 @@
 			</div>
 			<p class='glyphicon-ok'>To get more ditails please connect with us.<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Here</button></p>
 			<div class="panel-footer">
-				<button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span></button>Все права защищены
+				<button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>low
+				</button>Все права защищены
 			</div>
 		</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
