--- a/templates/index.html
+++ b/templates/index.html
@@ -18,37 +18,37 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
+  <div>
+  <div>
     <div class="navbar-wrapper">
       <div class="container">
-
         <nav class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Main</a></li>
-               <!-- <li><a href="#about">About</a></li>-->
                 <li><a href="contact.html">Contacts</a></li>
-                  </ul>
-                </li>
               </ul>
             </div>
           </div>
         </nav>
       </div>
     </div>
-    <div>
-    	<div class="container">
-    		<h1 class="pybursa_project">PyBursa Project</h1>
-		    	<div class="container">
-		    		<h3 class="description">WTF Description</h3>
-		    		<p class="first-p">	
+	<div>
+      <div>
+		    <div class="container">
+				<p>some text<br><br><br><br></p>
+				<h1 class="pybursa_project">Bursa Project</h1>
+		    	<h3 class="description">WTF Description</h3>
+		    	<p class="first-p">	
 		    			В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
 						Примерное соотношение теории и практики: 30% на 70%
 						Курсы будут проходить с 19 октября по 28 декабря.
 						Практические занятия в аудитории + онлайн лекции.
-		    		</p>
-		    	</div>
+		    	</p>
+		    </div>
+      </div>
 	    	<div class="container">
 	    		<h3 class="program">Program</h3>
 	    		<ul>
