--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,8 @@
     <div class="alert alert-info" role="alert">начинать</div>
     <div class="alert alert-warning" role="alert">учить</div>
     <div class="alert alert-danger" role="alert">Python</div>
+    <div class="alert alert-danger" role="alert">and</div>
+    <div class="alert alert-danger" role="alert">Django</div>
     <div class="alert1" role="alert">Python</div>
     <div class="alert2" role="alert">Python</div>
 
