added new styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -124,16 +124,8 @@
             Basic panel example
           </div>
         </div>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Basic panel example
-          </div>
-        </div>
+        <div class="panel panel-success">Python</div>
+        <div class="panel panel-info">Django</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
