--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a><span class="sr-only">(current)</span></li>
+             <li><a href="student_list.html">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -42,7 +43,7 @@
         <div class = "well">
           <table class = "contacts" cellpadding = "100">
           <tr>
-          <th>
+          <th class = "conth">
            <h2 class = "contact-header"> Director</h2>
           <p class = "condata"><img class = "con-info" alt = "director" src ="../static/images/director.jpg"/></br>
             Name: Nickolas Fury </br>
@@ -50,7 +51,7 @@
             Email: director@shield.ru </br>
             Phone: 144 - 78 - 92 </br>
           </p></th>
-          <th>
+          <th class = "conth">
           <h2 class = "contact-header"> Manager</h2>
           <p class = "condata"><img class = "con-info"alt = "manager" src ="../static/images/manager.jpg"/></br>
           Name: Pepper Potts </br>
@@ -59,7 +60,7 @@
             Phone: 932 - 12 - 12 </br>
           </p></th>
           
-          <th>
+          <th class = "conth">
           <h2 class = "contact-header"> Founder</h2>
           <p class = "condata"><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
           Name: Tonny Stark </br>
