added new styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 		    <div class="container">
 				<p>some text<br><br><br><br></p>
 				<h1 class="pybursa_project">Bursa Project</h1>
-		    	<h3 class="description">WTF Description</h3>
+		    	<h3 class="description">Yeah Description</h3>
 		    	<p class="first-p">	
 		    			В этом курсе мы сместили акцент в сторону практики.
 						Будет умеренное количество теории - максимум практики.
@@ -47,6 +47,7 @@
 						Курсы будут проходить с 19 октября по 28 декабря.
 						Практические занятия в аудитории + онлайн лекции.
 		    	</p>
+          <h5 class="pybursa_project">Bursa Project</h5>
 		    </div>
       </div>
 	    	<div class="container">
@@ -104,6 +105,29 @@
     <div class="alert1" role="alert">Python</div>
     <div class="alert2" role="alert">Python</div>
 
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Left</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Middle</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Right</button>
+  </div>
+  </div>
+
+  <div class="btn-group dropup">
+  <button type="button" class="btn btn-default">Dropup</button>
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="caret"></span>
+    <span class="sr-only">Toggle Dropdown</span>
+  </button>
+  <ul class="dropdown-menu">
+    <!-- Dropdown menu links -->
+  </ul>
+</div>
+
         <div class="panel panel-default">
           <div class="panel-body">
             Basic panel example
@@ -124,8 +148,7 @@
             Basic panel example
           </div>
         </div>
-        <div class="panel panel-success">Python</div>
-        <div class="panel panel-info">Django</div>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
