corrected header in student_list.html

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -39,7 +39,8 @@
     </nav>
     <div class= "container">
       <div class ="jumbotron">
-        <h1>PyBursa students</h1><hr>
+        <div class = "container"><h1>PyBursa students</h1></div>
+        <h3>There are five students</h3>
         <table class = "student-table">
         <thead>
           <tr>
