added new styles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@
 div div ul li{
 	font: bold italic 110% serif;
 }
-.description{
+.description2{
 	font-variant: small-caps;
 	font: bold italic 230% serif;
 }
